--- a/s.html
+++ b/s.html
@@ -15,19 +15,11 @@
   <meta name="browsermode" content="application"><!--UC应用模式-->
   <meta name="x5-fullscreen" content="true"><!--QQ强制全屏-->
   <meta name="x5-page-mode" content="app"><!--QQ应用模式-->
-  <title>简单搜索</title>
+  <title>欢哥简单搜索</title>
   <link href="style.css" rel="stylesheet">
   <link href="https://cdnjs.loli.net/ajax/libs/font-awesome/5.8.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?99243244082272ba565ed15cb2e62619";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+
 </head>
 
 <body>
@@ -164,7 +156,7 @@ var _hmt = _hmt || [];
 tpwidget("show");</script>
 <!--天气插件结束-->
 
-        <div class="foot">© 2016-2019 by <a href="https://yyv.me/">歪歪喂</a> . All rights reserved.</div>
+        <div class="foot">© 2016-2019 by <a href="/">欢哥网</a> . All rights reserved.</div>
     </div>
 <!--
 作者:D.Young
