--- a/s.html
+++ b/s.html
@@ -34,7 +34,7 @@
             <li><a rel="nofollow" href="https://translate.google.cn/?hl=zh-CN" target="_blank"><i class="fas fa-language" style="color: #02f;"></i>谷歌翻译</a></li>
             <li><a rel="nofollow" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter" style="color: #00bcff;"></i>Twitter</a></li>
             <li><a rel="nofollow" href="https://duckduckgo.com/?kl=cn-zh&amp;l=cn-zh" target="_blank"><i class="fas fa-mask" style="color:#fcb600"></i>鸭鸭走</a></li>
-            <li><a rel="nofollow" href="http://hgnet.ccaeo.com" target="_blank"><i class="fab fa-google" style="color:#4285f4"></i>镜像</a></li>
+            <li><a rel="nofollow" href="http://gufenso.coderschool.cn/" target="_blank"><i class="fab fa-google" style="color:#4285f4"></i>镜像</a></li>
             <li><a rel="nofollow" href="https://feedly.com" target="_blank"><i class="fas fa-rss" style="color: #11dd00;"></i>Feedly</a></li>
             <li><a rel="nofollow" href="https://pan.baidu.com" target="_blank"><i class="fas fa-cloud-download-alt" style="color: #148bfe;"></i>百度网盘</a></li>
             <li><a rel="nofollow" href="https://dyartstyle.com/youhuiquan/" target="_blank"><i class="fas fa-yen-sign" style="color: #f03;"></i>大额优惠券</a></li>
