--- a/s.html
+++ b/s.html
@@ -156,7 +156,7 @@
 tpwidget("show");</script>
 <!--天气插件结束-->
 
-        <div class="foot">© 2016-2019 by <a href="http://52hg.3vfree.com/">欢哥网</a> . All rights reserved.</div>
+        <div class="foot">© 2016-2019 <a href="http://52hg.3vfree.com/">欢哥网</a> . All rights reserved.</div>
     </div>
 <!--
 作者:D.Young
