--- a/s.html
+++ b/s.html
@@ -47,7 +47,7 @@
             <li><a rel="nofollow" href="http://www.zmz2019.com/" target="_blank"><i class="fas fa-closed-captioning"></i>字幕组</a></li>
             <li><a rel="nofollow" href="http://www.acfun.cn/index.html" target="_blank"><i class="fas fa-mountain" style="color:#f33;"></i>ACFUN</a></li>
             <li><a rel="nofollow" href="https://www.bilibili.com/" target="_blank"><i class="fas fa-compact-disc" style="color:#09e;"></i>哔哩哔哩</a></li>
-            <li><a rel="nofollow" href="https://sou.yyv.me/tv/" target="_blank"><i class="fas fa-satellite-dish" style="color:#9ae;"></i>直播电视</a></li>
+            <li><a rel="nofollow" href="https://5iux.cn/tv/" target="_blank"><i class="fas fa-satellite-dish" style="color:#9ae;"></i>直播电视</a></li>
             <li><a rel="nofollow" href="https://music.yyv.me/" target="_blank"><i class="fas fa-music" style="color:#f4a;"></i>音乐解析</a></li>
             <li class="title"><i class="far fa-object-ungroup"></i> 设计视觉</li>
             <li><a rel="nofollow" href="https://web.yyv.me/" target="_blank"><i class="fas fa-map-signs"></i>设计导航</a></li>
