--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="browsermode" content="application"><!--UC应用模式-->
   <meta name="x5-fullscreen" content="true"><!--QQ强制全屏-->
   <meta name="x5-page-mode" content="app"><!--QQ应用模式-->
-  <title>欢哥简单搜索</title>
+  <title>简单搜索—欢哥科技</title>
   <link href="style.css" rel="stylesheet">
   <link href="https://cdnjs.loli.net/ajax/libs/font-awesome/5.8.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -172,7 +172,7 @@
 tpwidget("show");</script>
 <!--天气插件结束-->
 
-        <div class="foot">© 2016-2019 <a href="http://52hg.3vfree.com/">欢哥网</a> . All rights reserved.</div>
+        <div class="foot">© 2016-2021 <a href="http://52hg.3vfree.com/">欢哥科技</a> . All rights reserved.</div>
     </div>
 </body>
 </html>
