--- a/index.html
+++ b/index.html
@@ -28,29 +28,27 @@
     <div class="list closed">
         <ul>
             <li class="title"><i class="fa fa-fire"></i> 常用</li>
-            <li><a rel="nofollow" href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i class="far fa-envelope" style="color: #f03;"></i>Gmail</a></li>
-            <li><a rel="nofollow" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram" style="color: #93009f;"></i>Instagram</a></li>
+            <li><a rel="nofollow" href="https://mail.qq.com/" target="_blank"><i class="far fa-envelope" style="color: #f03;"></i>QQ邮箱</a></li>
             <li><a rel="nofollow" href="https://www.taobao.com" target="_blank"><i class="fas fa-cart-plus" style="color: #ff6019;"></i>淘宝网</a></li>
             <li><a rel="nofollow" href="https://www.weibo.com" target="_blank"><i class="fab fa-weibo" style="color: #e6162d;"></i>微博</a></li>
             <li><a rel="nofollow" href="https://translate.google.cn/?hl=zh-CN" target="_blank"><i class="fas fa-language" style="color: #02f;"></i>谷歌翻译</a></li>
             <li><a rel="nofollow" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter" style="color: #00bcff;"></i>Twitter</a></li>
             <li><a rel="nofollow" href="https://duckduckgo.com/?kl=cn-zh&amp;l=cn-zh" target="_blank"><i class="fas fa-mask" style="color:#fcb600"></i>鸭鸭走</a></li>
             <li><a rel="nofollow" href="http://gufenso.coderschool.cn/" target="_blank"><i class="fab fa-google" style="color:#4285f4"></i>镜像</a></li>
-            <li><a rel="nofollow" href="https://feedly.com" target="_blank"><i class="fas fa-rss" style="color: #11dd00;"></i>Feedly</a></li>
-            <li><a rel="nofollow" href="https://pan.baidu.com" target="_blank"><i class="fas fa-cloud-download-alt" style="color: #148bfe;"></i>百度网盘</a></li>
+            <li><a rel="nofollow" href="https://tophub.today/" target="_blank"><i class="fas fa-rss" style="color: #11dd00;"></i>今日热榜</a></li>
+            <li><a rel="nofollow" href="https://speed.quickso.cn/" target="_blank"><i class="fas fa-cloud-download-alt" style="color: #148bfe;"></i>网速测试</a></li>
             <li class="title"><i class="fas fa-film"></i> 视频媒体</li>
             <li><a rel="nofollow" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube" style="color:#f03;"></i>Youtube</a></li>
             <li><a rel="nofollow" href="https://v.qq.com/" target="_blank"><i class="fas fa-play" style="color:#2a0;"></i>腾讯视频</a></li>
             <li><a rel="nofollow" href="https://www.youku.com/" target="_blank"><i class="far fa-play-circle" style="color:#09e;"></i>优酷</a></li>
             <li><a rel="nofollow" href="https://www.iqiyi.com/" target="_blank"><i class="fas fa-video" style="color:#1d0;"></i>爱奇艺</a></li>
-            <li><a rel="nofollow" href="https://lm.didibib.ml/" target="_blank"><i class="fab fa-searchengin" style="color:#f93;"></i>菲菲影视</a></li>
-            <li><a rel="nofollow" href="http://www.zmz2019.com/" target="_blank"><i class="fas fa-closed-captioning"></i>字幕组</a></li>
-            <li><a rel="nofollow" href="http://www.acfun.cn/index.html" target="_blank"><i class="fas fa-mountain" style="color:#f33;"></i>ACFUN</a></li>
+            <li><a rel="nofollow" href="https://www.nfmovies.com/" target="_blank"><i class="fab fa-searchengin" style="color:#f93;"></i>奈飞影视</a></li>
+            <li><a rel="nofollow" href="http://pianku.li" target="_blank"><i class="fas fa-closed-captioning"></i>片库</a></li>
+            <li><a rel="nofollow" href="http://www.acfun.cn" target="_blank"><i class="fas fa-mountain" style="color:#f33;"></i>ACFUN</a></li>
             <li><a rel="nofollow" href="https://www.bilibili.com/" target="_blank"><i class="fas fa-compact-disc" style="color:#09e;"></i>哔哩哔哩</a></li>
-            <li><a rel="nofollow" href="https://5iux.cn/tv/" target="_blank"><i class="fas fa-satellite-dish" style="color:#9ae;"></i>直播电视</a></li>
-            <li><a rel="nofollow" href="https://music.yyv.me/" target="_blank"><i class="fas fa-music" style="color:#f4a;"></i>音乐解析</a></li>
+            <li><a rel="nofollow" href="https://quickso.cn/live/" target="_blank"><i class="fas fa-satellite-dish" style="color:#9ae;"></i>直播电视</a></li>
+            <li><a rel="nofollow" href="https://quickso.cn/tools/music/" target="_blank"><i class="fas fa-music" style="color:#f4a;"></i>在线音乐</a></li>
             <li class="title"><i class="far fa-object-ungroup"></i> 设计视觉</li>
-            <li><a rel="nofollow" href="https://web.yyv.me/" target="_blank"><i class="fas fa-map-signs"></i>设计导航</a></li>
             <li><a rel="nofollow" href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest" style="color:#e02;"></i>Pinterest</a></li>
             <li><a rel="nofollow" href="https://www.behance.net/" target="_blank"><i class="fab fa-behance" style="color:#56f;"></i>Behance</a></li>
             <li><a rel="nofollow" href="https://www.dribbble.com/" target="_blank"><i class="fab fa-dribbble" style="color:#e48;"></i>Dribbble</a></li>
