--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 </ul>
             </div>
         </div>
+      <div class="bgo"></div> 
         <script>
         $(document).ready(function() {
             //判断窗口大小，添加输入框自动完成
