--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="Cache-Control" content="no-siteapp">
-  <link rel="icon" href="icon/192.png" sizes="192x192" />
-  <link rel="apple-touch-icon-precomposed" href="icon/300.png" />
-  <meta name="msapplication-TileImage" content="icon/300.png" />
-  <link rel="shortcut icon" href="icon/32.png"/>
+  <link rel="icon" href="https://quickso.cn/favicon.ico" sizes="192x192" />
+  <link rel="apple-touch-icon-precomposed" href="https://quickso.cn/favicon.ico" />
+  <meta name="msapplication-TileImage" content="https://quickso.cn/favicon.ico" />
+  <link rel="shortcut icon" href="https://quickso.cn/favicon.ico"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-touch-fullscreen" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -16,7 +16,10 @@
   <meta name="browsermode" content="application"><!--UC应用模式-->
   <meta name="x5-fullscreen" content="true"><!--QQ强制全屏-->
   <meta name="x5-page-mode" content="app"><!--QQ应用模式-->
-  <title>简单搜索—欢哥科技</title>
+  <title>快点搜—简洁版</title>
+  <meta data-n-head="true" data-hid="keywords" name="keywords" content="搜索,网址导航,上网导航,网址大全,快点搜,快搜,在线视频,免费,欢哥科技,资源搜索">
+    <meta data-n-head="true" data-hid="description" name="description" itemprop="description"
+        content="【快点搜】搜索，快一点！简单、好用、全面的网站导航">
   <link href="style.css" rel="stylesheet">
   <link href="https://cdnjs.loli.net/ajax/libs/font-awesome/5.8.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -81,7 +84,7 @@
     <div id="tp-weather-widget" class="mywth"></div>
     <div id="content">
         <div class="con">
-            <div class="shlogo"></div>
+            <div class="shlogo">Quickso</div>
             <div class="sou">
                 <form action="https://www.baidu.com/s?ie=utf-8" method="get" target="_self">
                     <input class="wd" type="text" placeholder="请输入搜索内容" name="wd" x-webkit-speech lang="zh-CN">
@@ -171,7 +174,7 @@
 </script>
 <!--天气插件结束-->
 
-        <div class="foot">© 2016-2021 <a href="http://52hg.3vfree.com/">欢哥科技</a> . All rights reserved.</div>
+        <div class="foot">© 2016-2021 <a href="http://52hg.3vfree.com/">欢哥科技</a> All rights reserved.</div>
     </div>
 </body>
 </html>
