--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="tp-weather-widget" class="mywth"></div>
     <div id="content">
         <div class="con">
-            <div class="shlogo">Quickso</div>
+            <div class="shlogo">QuickSo</div>
             <div class="sou">
                 <form action="https://www.baidu.com/s?ie=utf-8" method="get" target="_self">
                     <input class="wd" type="text" placeholder="请输入搜索内容" name="wd" x-webkit-speech lang="zh-CN">
