--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             <li><a rel="nofollow" href="https://www.taobao.com" target="_blank"><i class="fas fa-cart-plus" style="color: #ff6019;"></i>淘宝网</a></li>
             <li><a rel="nofollow" href="https://www.weibo.com" target="_blank"><i class="fab fa-weibo" style="color: #e6162d;"></i>微博</a></li>
             <li><a rel="nofollow" href="https://translate.google.cn/?hl=zh-CN" target="_blank"><i class="fas fa-language" style="color: #02f;"></i>谷歌翻译</a></li>
-            <li><a rel="nofollow" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter" style="color: #00bcff;"></i>Twitter</a></li>
-            <li><a rel="nofollow" href="https://duckduckgo.com/?kl=cn-zh&amp;l=cn-zh" target="_blank"><i class="fas fa-mask" style="color:#fcb600"></i>鸭鸭走</a></li>
-            <li><a rel="nofollow" href="http://gufenso.coderschool.cn/" target="_blank"><i class="fab fa-google" style="color:#4285f4"></i>镜像</a></li>
+            <li><a rel="nofollow" href="https://go-xyz.xyz/" target="_blank"><i class="fab fa-google" style="color:#4285f4"></i>镜像</a></li>
             <li><a rel="nofollow" href="https://tophub.today/" target="_blank"><i class="fas fa-rss" style="color: #11dd00;"></i>今日热榜</a></li>
             <li><a rel="nofollow" href="https://speed.quickso.cn/" target="_blank"><i class="fas fa-cloud-download-alt" style="color: #148bfe;"></i>网速测试</a></li>
             <li class="title"><i class="fas fa-film"></i> 视频媒体</li>
@@ -66,11 +64,10 @@
             <li><a rel="nofollow" href="https://github.com/" target="_blank"><i class="fab fa-github"></i>Github</a></li>
             <li><a rel="nofollow" href="https://codepen.io/" target="_blank"><i class="fab fa-codepen"></i>Codepen</a></li>
             <li><a rel="nofollow" href="https://ping.pe" target="_blank"><i class="fas fa-network-wired" style="color:#1d0;"></i>Ping.pe</a></li>
-            <li><a rel="nofollow" href="https://www.mdeditor.com/" target="_blank"><i class="fab fa-markdown" style="color:#09f;"></i>MD编辑器</a></li>
+            <li><a rel="nofollow" href="https://ping.chinaz.com/" target="_blank"><i class="fas fa-map-pin" style="color:#09f;"></i>站长Ping</a></li>
             <li><a rel="nofollow" href="https://www.52pojie.cn/" target="_blank"><i class="fas fa-theater-masks" style="color:#f03;"></i>吾爱破解</a></li>
             <li><a rel="nofollow" href="https://segmentfault.com/" target="_blank"><i class="fas fa-comment-dots" style="color:#096;"></i>SF思否</a></li>
-            <li><a rel="nofollow" href="http://web.jobbole.com/" target="_blank"><i class="fas fa-user-secret" style="color: #09c;"></i>伯乐在线</a></li>
-            <li><a rel="nofollow" href="https://miku.tools/" target="_blank"><i class="fas fa-tools"></i>Miku工具</a></li>
+            <li><a rel="nofollow" href="https://tools.miku.ac/" target="_blank"><i class="fas fa-tools"></i>Miku工具</a></li>
             <li><a rel="nofollow" href="http://cubic-bezier.com" target="_blank"><i class="fas fa-bezier-curve" style="color: #f08;"></i>贝赛尔曲线</a></li>
             <li><a rel="nofollow" href="https://cdnjs.com/" target="_blank"><i class="fab fa-js-square" style="color: #e52;"></i>CdnJs</a></li>
             <li><a rel="nofollow" href="https://fontawesome.com/icons?d=gallery&m=free" target="_blank"><i class="fab fa-font-awesome" style="color: #4af;"></i>Font A.</a></li>
