--- a/ip/index.html
+++ b/ip/index.html
@@ -34,6 +34,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        background: linear-gradient(91deg,#f1eefc,#9dc6ff 70%,#a5bcff);
     }
 
     ul { list-style: none;
