--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
  
     <div id="menu"><i></i></div>
     <div class="list closed">
-      <p id="hitokoto"><a href="#" id="hitokoto_text">:D 获取中...</a></p>
+      <ul>
+        <li class="title"><i class="fas fa-book"></i> 每日一言</li>
+        <p id="hitokoto">⌈ <a href="#" id="hitokoto_text">:D 获取中...</a> ⌋</p>
+      </ul>
+      
         <ul>
             <li class="title"><i class="fa fa-fire"></i> 常用</li>
             <li><a rel="nofollow" href="https://mail.qq.com/" target="_blank">QQ邮箱</a></li>
