--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <li><a rel="nofollow" href="https://www.taobao.com" target="_blank">淘宝网</a></li>
             <li><a rel="nofollow" href="https://www.weibo.com" target="_blank">微博</a></li>
             <li><a rel="nofollow" href="https://translate.google.cn/?hl=zh-CN" target="_blank">谷歌翻译</a></li>
-            <li><a rel="nofollow" href="https://go-xyz.xyz/" target="_blank">镜像</a></li>
+            <li><a rel="nofollow" href="https://go-xyz.xyz/" target="_blank">谷歌镜像</a></li>
             <li><a rel="nofollow" href="https://tophub.today/" target="_blank">今日热榜</a></li>
             <li><a rel="nofollow" href="https://speed.quickso.cn/" target="_blank">网速测试</a></li>
-            <li><a rel="nofollow" href="/ip/" target="_blank">IP查询</a></li>
+            <li><a rel="nofollow" href="ip" target="_blank">IP查询</a></li>
             <li class="title"><i class="fa fa-film"></i> 视频媒体</li>
             <li><a rel="nofollow" href="https://www.youtube.com/" target="_blank">Youtube</a></li>
             <li><a rel="nofollow" href="https://v.qq.com/" target="_blank">腾讯视频</a></li>
