--- a/ip/index.html
+++ b/ip/index.html
@@ -46,22 +46,22 @@
         margin:auto;
         height: 250px;
         display:block;
-        border: 1px solid #ddd;
+        border: 1px solid rgb(17, 14, 14);
     }
 
     li {
         width: 100%; display: block; float: left;
         text-align: center; font-family: Helvetica,Arial,sans-serif; font-size: 14px; 
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid rgb(8, 8, 8);
         height: 50px; line-height: 50px;
     }
     li:nth-child(1){ height: 30px; line-height: 30px;}
     span{
         display: block;width: 70%; float: left; height: 100%; overflow: hidden;
     }
-    li span:nth-child(1){ border-right: 1px solid #ddd; width: calc(30% - 1px);}
-    span a{display: block; width: 90px; height: 30px; font-size: 14px; line-height: 30px; border: 1px solid #ddd; border-radius: 15px; color: #000; cursor:pointer; overflow: hidden; margin: 15px auto 0; text-decoration: none;}
-    span a:active{ border-color: #fff; box-shadow: 0 1px 20px 0 rgba(0, 0, 0, .1) }
+    li span:nth-child(1){ border-right: 1px solid rgb(12, 10, 10); width: calc(30% - 1px);}
+    span a{display: block; width: 90px; height: 30px; font-size: 14px; line-height: 30px; border: 1px solid rgb(22, 18, 18); border-radius: 15px; color: #000; cursor:pointer; overflow: hidden; margin: 15px auto 0; text-decoration: none;}
+    span a:active{ border-color: rgb(12, 10, 10); box-shadow: 0 1px 20px 0 rgba(0, 0, 0, .1) }
     .flag{ display: inline-block;height: 12px; }
     </style>
 <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
